<resources>
    <string name="app_name">MyMaps</string>
    <string name="action_settings">Settings</string>
    <string name="location">Location:</string>
    <string name="search">SEARCH</string>
    <string name="nomal">Normal</string>
    <string name="satellite">Satellite</string>
    <string name="terran">Terran</string>
    <string name="hybrid">Hybrid</string>
    <string name="none">None</string>
    <string name="current_location">Current Location</string>
</resources>
